--- a/InstaCloneFirebase/Info.plist
+++ b/InstaCloneFirebase/Info.plist
@@ -43,6 +43,8 @@
 	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To Choose a Photo!</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
